# GBcc

./: .gitignore  CMakeLists.txt  README.md
include/: Types.hpp  Utility.hpp
include/Core/: Bitmasks.hpp  Memory.hpp  MemoryConstants.hpp  System.hpp  SystemConstants.hpp
include/Core/Sharp/: Sharp.hpp  SharpConstants.hpp  SharpRegister.hpp
include/Emulator/: Emulator.hpp
include/Video/: Video.hpp  VideoConstants.hpp
src/: CMakeLists.txt  main.cpp
src/Core/: CMakeLists.txt  Memory.cpp  System.cpp
src/Core/Sharp/: CMakeLists.txt  Fetch.cpp  Sharp.cpp  SharpRegister.cpp
src/Core/Sharp/Decoding/: InstructionBlocks.cpp  InstructionHandlers.cpp
src/Core/Sharp/Instructions/: ALU.cpp  Accumulator.cpp  BitOps.cpp  CMakeLists.txt  FlowControl.cpp  LoadStore.cpp
src/Emulator/: CMakeLists.txt  Emulator.cpp
src/Video/: CMakeLists.txt  Video.cpp
tests/: CMakeLists.txt  RegisterBitTest.cpp  RegisterCopyTest.cpp  RegisterFlagsTest.cpp  RegisterInstantiationTest.cpp  RegisterMoveTest.cpp  RegisterSetTest.cpp  TestFunctions.hpp
